fixed text alignment on schedule table

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -89,6 +89,7 @@ table {
   .time {
     padding-left: 10px;
     min-width: 90px;
+    text-align: right;
   }
 
   .event {
